Added authors and new subsection.

--- a/eos.tex
+++ b/eos.tex
@@ -2,12 +2,15 @@
 \begin{document}
 \section*{Equation of State and the Physics of Dense Matter Summary}
 \begin{center}
-  With contributions from: {\it{Francesca Gulminelli (Caen),
-      Jeremy Holt (Texas A\&M),
-      Charles Horowitz (IU), Morten Horth-Jensen (MSU),
+  With contributions from: {\it{Christian Drischler (Darmstadt),
+      Francesca Gulminelli (Caen),
+      Jeremy Holt (Texas A\&M), Charles Horowitz (IU),
+      Morten Horth-Jensen (MSU),
       Francesco Pederiva (Trento), Jorge Piekarewicz (FSU),
       Madappa Prakash (Ohio U.), Luke Roberts (MSU),
-      Andrew W. Steiner (UTK/ORNL)}}
+      Andre de Silva Schneider (Caltech),
+      Andrew W. Steiner (UTK/ORNL)}, Ingo Tews (INT),
+    Corbinan Wellenhofer (Munich)}
 \end{center}
 
 Heavy-ion collisions, in concert with other experimental probes of
@@ -48,5 +51,10 @@ hot and/or isospin-symmetric matter is difficult for theory and not
 yet constrained by astronomical observations. Thus heavy-ion
 collisions (through observables like pion ratios) are important in
 constraining dense matter.
+
+\subsection{Action Items}
+
+Paragraph regarding JINA-CEE EOS working group.
+
 
 \end{document}
