Fixed name typo.

--- a/eos.tex
+++ b/eos.tex
@@ -10,7 +10,7 @@
       Madappa Prakash (Ohio U.), Luke Roberts (MSU),
       Andre de Silva Schneider (Caltech),
       Andrew W. Steiner (UTK/ORNL)}, Ingo Tews (INT),
-    Corbinan Wellenhofer (Munich)}
+    Corbinian Wellenhofer (TU Munich)}
 \end{center}
 
 Heavy-ion collisions, in concert with other experimental probes of
